--- a/plugin.xml
+++ b/plugin.xml
@@ -91,6 +91,8 @@
 		<config-file parent="aps-environment" target="*/Entitlements-Release.plist">
 			<string>production</string>
 		</config-file>
+
+	    <resource-file src="src/ios/GoogleService-Info.plist" target="Resources/GoogleService-Info.plist" />
 		
         <header-file src="src/ios/FCMPlugin.h" />
         <source-file src="src/ios/FCMPlugin.m" />
